--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-spring.application.name=microservice-gateway
+server:
+  port: 8585
+
+spring:
+  application:
+    name: msvc-gateway
+  config:
+    import: optional:configserver:http://localhost:8888
+  cloud:
+    discovery:
+      locator:
+        enabled: true
+    routes:
+      - id: placeholder
+        uri: http://localhost:8090
+        predicates:
+          - Path=/uvaq/api/**
+      - id: dog
+        uri: http://localhost:9090
+        predicates:
+          - Path=/uvaq/api/dogs/**
